[package]
name = "dep-sense"
version = "0.1.0"
edition = "2021"
description = "Supply Chain Intelligence Platform for Rust"
license = "MIT OR Apache-2.0"

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Analysis
cargo_metadata = "0.15"
semver = "1.0"

# CLI
clap = { version = "4.2", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Analysis tools
regex = "1.5"
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json"], default-features = false }
